# pytest-playwright-example

./: .gitignore  README.es.md  README.md  docker-compose.yml
backend/: Dockerfile
backend/app/: pyproject.toml  requirements.txt  wsgi.py
backend/app/templates/: base.html  inicio.html
backend/app/tests/: conftest.py  test_inicio.py
backend/app/tests/pajinas/: inicio.py
