[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["m1yag1 <mike.arbelaez@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
playwright = "^1.34.0"
pytest-base-url = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
